libnotificationmanager/abstractnotificationsmodel_p.h
@@ -40,6 +40,7 @@ public:
     QTimer pendingRemovalTimer;
 
     QDateTime lastRead;
+    QWindow *window = nullptr;
 };
 
 }
