libnotificationmanager/notificationsmodel.cpp
@@ -6,7 +6,6 @@
 */
 
 #include "notificationsmodel.h"
-#include "abstractnotificationsmodel_p.h"
 #include "notification_p.h"
 #include "server.h"
 
@@ -82,7 +81,8 @@ void NotificationsModel::invokeDefaultAction(uint notificationId, Notifications:
     Server::self().invokeAction(notificationId,
                                 QStringLiteral("default"), // FIXME make a static Notification::defaultActionName() or something
                                 notification.d->xdgTokenAppId,
-                                behavior);
+                                behavior,
+                                window());
 }
 
 void NotificationsModel::invokeAction(uint notificationId, const QString &actionName, Notifications::InvokeBehavior behavior)
@@ -98,7 +98,7 @@ void NotificationsModel::invokeAction(uint notificationId, const QString &action
         return;
     }
 
-    Server::self().invokeAction(notificationId, actionName, notification.d->xdgTokenAppId, behavior);
+    Server::self().invokeAction(notificationId, actionName, notification.d->xdgTokenAppId, behavior, window());
 }
 
 void NotificationsModel::reply(uint notificationId, const QString &text, Notifications::InvokeBehavior behavior)
@@ -130,7 +130,8 @@ void NotificationsModel::configure(uint notificationId)
         Server::self().invokeAction(notificationId,
                                     QStringLiteral("settings"),
                                     notification.d->xdgTokenAppId,
-                                    Notifications::None); // FIXME make a static Notification::configureActionName() or something
+                                    Notifications::None, // FIXME make a static Notification::configureActionName() or something
+                                    window());
         return;
     }
 
